[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alipay-sdk-python"
version = "3.7.826"
description = "The official Aliyun SDK for Python."
readme = "README.rst"
license = {text = "Apache"}
authors = [
    {name = "antopen", email = "antopen@aliyun.com"}
]
keywords = ["alipay", "sdk"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License", 
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Topic :: Software Development",
]
dependencies = [
    "pycryptodome",
    "rsa"
]

[project.urls]
homepage = "https://github.com/alipay/alipay-sdk-python-all"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true